Controllers and services were updated based on the TODOs